--- a/book.Rmd
+++ b/book.Rmd
@@ -126,7 +126,21 @@ Note : a ring is a set _A_ with two operations, usually symbolized by + and $\cd
 
 # Ch. 2 : Operations (1/5)
 
+_An operation * on A is a rule which assigns to each ordered pair (a,b) of elements of A exactly one element of a*b in A._
 
+There are three aspects of this definition which need to be stressed: 
+
+(1) _a*b is defined $\forall$ oredered pair (a,b) of elements of A_
+
+- For example, division does not qualify as an operation on the set of $\mathbb{R}$ the real numbers, for there are ordered pairs such as (3,0) whose quotient 3/0 is undefined. In order to be an operation on $\mathbb{R}$, division would have to associate a real number alb with every ordered pair (a, b) of elements of $\mathbb{R}$.
+
+(2) _a*b must be uniquely defined._
+
+(3) _If a and b are in A, a*b must be in A_
+
+- "A is closed under the operation *"
+
+An operations is a way of combining two elements, so associiative law is important when considering 3 or more elements
 
 # Ch. 3 (1/7)
 
