Added css to algin headers in table of contents on midterm page

--- a/midterm.Rmd
+++ b/midterm.Rmd
@@ -7,6 +7,7 @@ knit: (function(input_file, encoding) {
  output_file=file.path(dirname(input_file), out_dir, 'midterm.html'))})
 output:
   html_document:
+    css: style.css
     toc: true
     toc_float: TRUE
     theme: cerulean
